# monoids-in-the-category-of-endofunctors

./: .gitignore  README.md  monoids-in-the-category-of-endofunctors.cabal  monoids-in-the-categoy-of-endofunctors.cabal  package.yaml  stack.yaml
.github/workflows/: ci.yml
src/: Category.hs  Quantifier.hs
src/Category/: Applicative.hs  Base.hs  Constraint.hs  Enriched.hs  Evil.hs  Free.hs  Functor.hs  Good.hs  Groupoid.hs  Monad.hs  Monoid.hs  Monoidal.hs  Nat.hs  Natural.hs  NaturalTransformation.hs  Neutral.hs  Product.hs  Semigroup.hs  Star.hs  Unit.hs  Void.hs
src/Category/Functor/: Base.hs  Const.hs  Foldable.hs  Identity.hs
src/Category/Functor/Foldable/: TH.hs  THT.hs
src/Category/Internal/: Ambiguous.hs  Hom.hs
src/Category/Neutral/: Enriched.hs  NaturalTransformation.hs
src/Data/: Dict.hs  Fin.hs  Identity.hs  Nat.hs  Proxy.hs  Recursive.hs  Vec.hs
