cabal-version: 2.2

name:           monoids-in-the-category-of-endofunctors
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/jamestmartin/monoids-in-the-categoy-of-endofunctors#readme>
homepage:       https://github.com/jamestmartin/monoids-in-the-categoy-of-endofunctors#readme
bug-reports:    https://github.com/jamestmartin/monoids-in-the-categoy-of-endofunctors/issues
author:         James Martin
maintainer:     james@jtmar.me
copyright:      Copyright: (C) 2020 James Martin
license:        GPL-3.0-or-later
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/jamestmartin/monoids-in-the-categoy-of-endofunctors

library
  exposed-modules:
      Category.Base
      Category.Constraint
      Category.Enriched
      Category.Functor
      Category.Functor.Foldable
      Category.Groupoid
      Category.Monoid
      Category.Monoidal
      Category.Semigroup
      Data.Dict
      Data.Fin
      Data.Identity
      Data.Nat
      Data.Proxy
      Data.Vec
      Quantifier
  other-modules:
  hs-source-dirs:
      src
  default-extensions:
      ApplicativeDo
      BangPatterns
      BinaryLiterals
      BlockArguments
      ConstraintKinds
      DataKinds
      DefaultSignatures
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      DerivingStrategies
      EmptyCase
      EmptyDataDeriving
      ExistentialQuantification
      ExplicitForAll
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      GeneralizedNewtypeDeriving
      HexFloatLiterals
      ImportQualifiedPost
      InstanceSigs
      KindSignatures
      LambdaCase
      LinearTypes
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NamedWildCards
      NoImplicitPrelude
      NumericUnderscores
      OverloadedStrings
      PartialTypeSignatures
      PatternSynonyms
      PolyKinds
      PostfixOperators
      QuantifiedConstraints
      RankNTypes
      ScopedTypeVariables
      StandaloneDeriving
      StandaloneKindSignatures
      TupleSections
      TypeApplications
      TypeFamilyDependencies
      TypeOperators
      TypeSynonymInstances
      ViewPatterns
  ghc-options: -Weverything -Wno-missing-export-lists -Wno-missing-import-lists -Wno-missing-safe-haskell-mode -Wno-safe -Wno-unsafe
  build-depends:
      base >=4.14 && <5
    , ghc-prim >=0.7 && <0.8
  default-language: Haskell2010
